Update Bayes estimator and related classes for improved accuracy
Refined the model name from "ML Bayes Estimator" to "Bayes Estimator" and increased the precision by adjusting the priorCount from integer to double. Also, introduced a new BayesEstimatorParamsEditor which provides enhanced control over configuring Bayesian model parameters. These changes ensure a higher accuracy in estimation and better configurability.